<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/showImgDelete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        android:title="@string/lbl_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/showImgCrop"
        android:icon="@drawable/ic_crop"
        android:orderInCategory="2"
        android:title="@string/lbl_crop"
        app:showAsAction="always" />

    <item
        android:id="@+id/showImgRotate"
        android:icon="@drawable/ic_rotate_right"
        android:orderInCategory="3"
        android:title="@string/lbl_rotate"
        app:showAsAction="always" />
    <item
        android:id="@+id/showImgAttach"
        android:icon="@drawable/ic_attach"
        android:orderInCategory="4"
        android:title="@string/lbl_add_media"
        app:showAsAction="always" />


    <item
        android:id="@+id/showImgDone"
        android:icon="@drawable/ic_check_white"
        android:orderInCategory="5"
        android:title="@string/lbl_done"
        app:showAsAction="always" />

</menu>