<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tb_image_pick"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tvCancel"
                customForegroundColor="@{``}"
                style="@style/filepickerToolbarImageStyle"
                android:src="@drawable/ic_close_white_24dp" />

            <TextView
                android:id="@+id/ivLeft"
                customForegroundColor="@{``}"
                style="@style/FilePickerToolbarTextButton"
                android:text="@string/lbl_prev" />

            <!--<ImageView
                    android:id="@+id/ivLeft"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="?android:attr/actionBarSize"
                    android:padding="16dp"
                    android:src="@drawable/ic_back"/>-->

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/lbl_crop"
                customForegroundColor="@{``}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ivRight"
                style="@style/FilePickerToolbarTextButton"
                customForegroundColor="@{``}"
                android:text="@string/lbl_next" />

            <ImageView
                android:id="@+id/tvFinish"
                style="@style/filepickerToolbarImageStyle"
                customForegroundColor="@{``}"
                android:src="@drawable/ic_check_white" />

            <!--<ImageView
                    android:id="@+id/ivRight"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="?android:attr/actionBarSize"
                    android:padding="16dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"/>-->

        </LinearLayout>

        <com.example.flutter_files_picker.filepicker.util.CustomViewPager
            android:id="@+id/vp_image_pick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tb_image_pick"
            customBackgroundColor="@{``}" />

        <!--<RelativeLayout
                android:id="@+id/layout_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="#efefef">

    &lt;!&ndash;        <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="CANCEL"
                    android:textAllCaps="true"
                    android:textColor="@color/black"/>&ndash;&gt;

    &lt;!&ndash;        <TextView
                    android:id="@+id/tvFinish"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:text="FINISH"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"/>&ndash;&gt;
        </RelativeLayout>
    -->

    </RelativeLayout>
</layout>
